Changes to run on m2 arm and library updates